// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyWalletTile component should render correctly when coupons are not present 1`] = `
<Styled(View)>
  <Component
    color="black"
    fontFamily="secondary"
    fontSize="fs16"
    text="lbl_overview_myWalletHeading"
  />
  <Component
    $$typeof={Symbol(react.forward_ref)}
    attrs={Array []}
    displayName="Styled(View)"
    inlineStyle={
      InlineStyle {
        "rules": Array [
          "
  height: 1px;
  background-color: ",
          [Function],
          ";
  margin-bottom: ",
          [Function],
          ";
  margin-top: ",
          [Function],
          ";
",
        ],
      }
    }
    render={[Function]}
    styledComponentId="StyledNativeComponent"
    target={[Function]}
    withComponent={[Function]}
  />
  <View>
    <Component
      color="black"
      fontFamily="secondary"
      fontSize="fs13"
      text="lbl_overview_myWalletNoOfferAvailable lbl_overview_myWalletStartShop"
    />
    <Styled(View)>
      <Component
        accessibilityLabel="lbl_overview_myWalletShopCTA"
        accessibilityRole="link"
        anchorVariation="button"
        borderColor="black"
        borderWidth="1"
        buttonVariation="variable-width"
        centered={true}
        dataLocator="accountoverview-myWallettile-startshopbtn"
        fill="WHITE"
        fullWidth={true}
        onPress={[Function]}
        text="lbl_overview_myWalletShopCTA"
      />
    </Styled(View)>
  </View>
  <Styled(View)>
    <Component
      buttonVariation="variable-width"
      fill="BLUE"
      onPress={[Function]}
      text="lbl_overview_viewMyWalletCTA"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`MyWalletTile component should render correctly when coupons are present 1`] = `
<Styled(View)>
  <Component
    color="black"
    fontFamily="secondary"
    fontSize="fs16"
    text="lbl_overview_myWalletHeading"
  />
  <Component
    $$typeof={Symbol(react.forward_ref)}
    attrs={Array []}
    displayName="Styled(View)"
    inlineStyle={
      InlineStyle {
        "rules": Array [
          "
  height: 1px;
  background-color: ",
          [Function],
          ";
  margin-bottom: ",
          [Function],
          ";
  margin-top: ",
          [Function],
          ";
",
        ],
      }
    }
    render={[Function]}
    styledComponentId="StyledNativeComponent"
    target={[Function]}
    withComponent={[Function]}
  />
  <Styled(View)>
    <View>
      <Component
        data-locator="accountoverview-mywallettile-youhavewallettext"
        fontSize="fs14"
        fontWeight="semibold"
        text="lbl_overview_myWalletOfferAvailable"
      />
    </View>
    <Styled(View)>
      <CouponList
        commonLabels={Object {}}
        coupons={
          Immutable.List [
            Object {},
          ]
        }
        labels={
          Object {
            "lbl_overview_myPlaceRewardsAvailable": "",
          }
        }
        sliceCount={3}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View)>
    <Component
      buttonVariation="variable-width"
      fill="BLUE"
      onPress={[Function]}
      text="lbl_overview_walletViewAllCTA"
    />
  </Styled(View)>
</Styled(View)>
`;
